<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_dynamique_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <FrameLayout android:id="@+id/Container_bouton7"
        android:layout_width="288px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/une_semaine"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/Container_bouton6"
        android:layout_width="288px"
        android:layout_height="0dp"
        android:minWidth="150dp"
        android:layout_weight="1"
        android:background="@color/Gray">
        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/six_jour"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/Container_bouton5"
        android:layout_width="450px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cinq_jour"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/Container_bouton4"
        android:layout_width="450px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/quatre_jour"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>

    <FrameLayout android:id="@+id/Container_bouton3"
        android:layout_width="450px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trois_jour"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/Container_bouton2"
        android:layout_width="450px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avant_hier"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/Container_bouton1"
        android:layout_width="450px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cornflower_blue_65">
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_comment_black_48px"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center|right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hier"
            android:textAppearance="@style/TextHistoryStyle"/>
    </FrameLayout>
</LinearLayout>
