<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh7"
        app:layout_constraintEnd_toStartOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh6"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh7"
        app:layout_constraintVertical_bias="0.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh5"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh6"
        app:layout_constraintVertical_bias="0.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh4"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh5"
        app:layout_constraintVertical_bias="0.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh3"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh4"
        app:layout_constraintVertical_bias="0.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh2"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh3"
        app:layout_constraintVertical_bias="0.0"/>
    <RelativeLayout
        android:id="@+id/activity_history_relative_layout_day_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_history_guidelineh1"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_guidelinev5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_history_guidelineh2"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/txt_day_7"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/une_semaine"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_day_6"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/six_jour"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh7" />
    <TextView
        android:id="@+id/txt_day_5"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cinq_jour"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh6" />
    <TextView
        android:id="@+id/txt_day_4"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quatre_jour"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh5" />
    <TextView
        android:id="@+id/txt_day_3"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trois_jour"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh4" />
    <TextView
        android:id="@+id/txt_day_2"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avant_hier"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh3" />

    <TextView
        android:id="@+id/txt_day_1"
        style="@style/TextHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hier"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh2" />

    <ImageButton
        android:id="@+id/activity_history_btn_day_7"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh7"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_7"
        app:layout_constraintTop_toBottomOf="@+id/txt_day_7"
        app:layout_constraintVertical_bias="0.303" />
    <ImageButton
        android:id="@+id/activity_history_btn_day_6"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/txt_day_6"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh6"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_6"
        app:layout_constraintVertical_bias="0.303"
        />
    <ImageButton
        android:id="@+id/activity_history_btn_day_5"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh5"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_5"
        app:layout_constraintTop_toBottomOf="@+id/txt_day_5"
        />
    <ImageButton
        android:id="@+id/activity_history_btn_day_4"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh4"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_4"
        app:layout_constraintTop_toBottomOf="@+id/txt_day_4"
        />
    <ImageButton
        android:id="@+id/activity_history_btn_day_3"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh3"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_3"
        app:layout_constraintTop_toBottomOf="@+id/txt_day_3"
        />
    <ImageButton
        android:id="@+id/activity_history_btn_day_2"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh2"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_2"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh3" />
    <ImageButton
        android:id="@+id/activity_history_btn_day_1"
        style="@style/PopupHistoryStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_history_guidelineh1"
        app:layout_constraintEnd_toEndOf="@+id/activity_history_relative_layout_day_1"
        app:layout_constraintTop_toTopOf="@+id/activity_history_guidelineh2" />

    <!--Guideline Horizontal-->

    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99999999" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.857142857" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.714285714" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.571428572" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.428571429" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.285714286" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1428571429" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelineh8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.000001" />

    <!--Guideline Verticale-->

    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelinev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelinev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelinev3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelinev4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />
    <android.support.constraint.Guideline
        android:id="@+id/activity_history_guidelinev5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25304136" />

    <!--Groupe Layout et Text-->

    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_7,activity_history_relative_layout_day_7" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_6,activity_history_relative_layout_day_6" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_5,activity_history_relative_layout_day_5" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_4,activity_history_relative_layout_day_4" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_3,activity_history_relative_layout_day_3" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_2,activity_history_relative_layout_day_2" />
    <android.support.constraint.Group
        android:id="@+id/activity_history_group_day_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txt_day_1,activity_history_relative_layout_day_1" />

    <TextView
        android:id="@+id/activity_history_empty_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historique_empty"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>